# mcp-excel-server

./: .gitignore  README.md  pyproject.toml  sample_data.xlsx
mcp_excel_server/: server.py
